--- a/style.css
+++ b/style.css
@@ -1,17 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
-/*
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-- Very Dark Grayish Blue: hsl(217, 19%, 35%)
-- Desaturated Dark Blue: hsl(214, 17%, 51%)
-- Grayish Blue: hsl(212, 23%, 69%)
-- Light Grayish Blue: hsl(210, 46%, 95%)
-
-*/
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -21,7 +8,7 @@ body {
   font-family: 'Manrope', sans-serif;
   background: hsl(210, 46%, 95%);
   font-size: 15px;
-  padding: 40px;
+  padding: 10px;
   min-height: 100vh;
 }
 
@@ -37,6 +24,7 @@ body {
 .component__image {
   background: center / cover url("images/drawers.jpg");
   height: 300px;
+  border-radius: 0 10px;
 }
 
 .component__content {
@@ -94,10 +82,13 @@ body {
   background: hsl(217, 19%, 35%);
   position: absolute;
   bottom: 0;
-  padding: 32px 20px;
+  padding: 35px 20px;
   width: 100%;
   display: flex;
-  /* display: none; */
+  transform: scale(0);
+  opacity: 0;
+  transform-origin: right;
+  transition: all .2s ease-in-out;
 }
 
 .component__share-text {
@@ -110,6 +101,11 @@ body {
   margin: 0 15px;
 }
 
+.open {
+  transform: scale(1);
+  opacity: 1;
+}
+
 
 @media (min-width: 1000px) {
  .component {
@@ -120,6 +116,7 @@ body {
  .component__image {
    flex: 1 1 40%;
    height: auto;
+   border-radius: 10px 0 0 10px;
  }
 
  .component__content {
@@ -133,6 +130,7 @@ body {
    right: -70px;
    bottom: 90px;
    border-radius: 10px;
+   transform-origin: center;
  }
 
  .component__share::after {
@@ -143,5 +141,13 @@ body {
    left: 50%;
    rotate: 45deg;
    bottom: -10px;
+   transform: scale(0);
+   opacity: 0;
+   transition: all .4s;
+ }
+
+ .component__share.open::after {
+   transform: scale(1);
+   opacity: 1;
  }
 }
