--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 .component__image {
   background: center / cover url("images/drawers.jpg");
   height: 300px;
-  border-radius: 0 10px;
+  border-radius: 10px 10px 0 0;
 }
 
 .component__content {
