--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
+/* GENERALS */
+
 *,
 *::before,
 *::after {
@@ -18,8 +20,20 @@ body {
   align-items: center;
 }
 
-.hide {
-  display: none;
+.testimonial.active {
+  opacity: 1;
+  transition: all .5s ease-in;
+}
+
+.swipe-left {
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: all .3s ease-in;
+}
+
+.swipe-right {
+  transform: translateX(100%);
+  opacity: 0;
   transition: all .3s ease-in;
 }
 
@@ -29,12 +43,19 @@ body {
   position: relative;
   max-width: 400px;
   text-align: center;
+  display: grid;
+}
+
+.testimonial {
+  grid-column: 1;
+  grid-row: 1;
+  opacity: 0;
 }
 
 .testimonial__person {
   position: relative;
   background: center / contain no-repeat url(images/pattern-bg.svg);
-  padding: 30px;
+  padding: 20px;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
@@ -52,7 +73,7 @@ body {
   background: white;
   height: 30px;
   width: 60px;
-  top: 215px;
+  top: 205px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50px;
@@ -92,6 +113,8 @@ body {
   font-size: 0.9rem;
   color: hsl(240, 18%, 77%);
 }
+
+/* DESKTOP */
 
 @media (min-width: 800px) {
 
