--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .testimonial.active {
@@ -68,32 +69,6 @@ body {
   box-shadow: -5px 43px 54px -20px hsl(240, 9%, 64%);
 }
 
-.testimonial__buttons {
-  position: absolute;
-  background: white;
-  height: 30px;
-  width: 60px;
-  top: 205px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50px;
-  justify-content: space-between;
-  display: flex;
-  z-index: 1;
-}
-
-.testimonial__buttons > button {
-  background: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 50px;
-  flex: 1;
-}
-
-.testimonial__buttons img {
-  width: 10px;
-  vertical-align: middle;
-}
 
 .testimonial__opinion {
   background: top center / 20% 20% no-repeat url(images/pattern-quotes.svg);
@@ -109,9 +84,35 @@ body {
 }
 
 .testimonial__position {
-  font-weight: 300;
+  font-weight: 500;
   font-size: 0.9rem;
   color: hsl(240, 18%, 77%);
+}
+
+.testimonial__buttons {
+  position: absolute;
+  background: white;
+  height: 30px;
+  width: 60px;
+  top: 205px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50px;
+  display: flex;
+  z-index: 1;
+}
+
+.testimonial__buttons>button {
+  background: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 50px;
+  flex: 1;
+}
+
+.testimonial__buttons img {
+  width: 10px;
+  vertical-align: middle;
 }
 
 /* DESKTOP */
@@ -128,9 +129,10 @@ body {
   }
 
   .testimonial {
-    /* border: 2px solid red; */
     position: relative;
-    height: 480px;
+    margin: 0 auto;
+    width: 90%;
+    height: 450px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -139,37 +141,38 @@ body {
   .testimonial__person {
     position: absolute;
     padding: 38px;
-    /* border: 2px solid black; */
     margin: 0;
     top: 0;
-    right: -65px;
+    right: -60px;
     bottom: 0;
     z-index: -1;
   }
 
   .testimonial__picture {
     max-width: 100%;
-  }
-
-  .testimonial__buttons {
-    top: auto;
-    left: auto;
-    right: 300px;
-    bottom: 23px;
+    max-height: 372px;
   }
 
   .testimonial__opinion {
-    max-width: 60%;
-    font-size: 1.5rem;
+    max-width: 65%;
+    font-size: 1.2rem;
     line-height: 1.3;
     color: hsl(240, 38%, 20%);
   }
 
   .testimonial__signature {
-    padding: 10px 20px;
+    padding: 0 20px;
     display: flex;
   }
+
   .testimonial__author {
     margin-right: 10px;
+  }
+
+  .testimonial__buttons {
+    top: auto;
+    left: auto;
+    right: 240px;
+    bottom: 23px;
   }
 }
