--- a/style.css
+++ b/style.css
@@ -64,16 +64,17 @@ body {
 }
 
 .testimonial__picture {
-  max-width: 200px;
+  max-width: 240px;
   border-radius: 5px;
   box-shadow: -5px 43px 54px -20px hsl(240, 9%, 64%);
 }
 
 
 .testimonial__opinion {
-  background: top center / 20% 20% no-repeat url(images/pattern-quotes.svg);
+  background: top center / 15% 20% no-repeat url(images/pattern-quotes.svg);
+  color: hsl(240, 38%, 20%);
   padding: 20px;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: 300;
   line-height: 1.5;
 }
@@ -92,9 +93,9 @@ body {
 .testimonial__buttons {
   position: absolute;
   background: white;
-  height: 30px;
-  width: 60px;
-  top: 205px;
+  height: 40px;
+  width: 80px;
+  top: 245px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50px;
@@ -140,7 +141,7 @@ body {
 
   .testimonial__person {
     position: absolute;
-    padding: 38px;
+    padding: 48px;
     margin: 0;
     top: 0;
     right: -60px;
@@ -155,13 +156,12 @@ body {
 
   .testimonial__opinion {
     max-width: 65%;
-    font-size: 1.2rem;
+    font-size: 1.55rem;
     line-height: 1.3;
-    color: hsl(240, 38%, 20%);
   }
 
   .testimonial__signature {
-    padding: 0 20px;
+    padding: 10px 20px;
     display: flex;
   }
 
@@ -173,6 +173,6 @@ body {
     top: auto;
     left: auto;
     right: 240px;
-    bottom: 23px;
+    bottom: 30px;
   }
 }
