--- a/style.css
+++ b/style.css
@@ -33,21 +33,27 @@ body {
   text-align: center;
 }
 
+.show {
+  display: block !important;
+}
+
 header {
   padding: 20px;
   text-align: left;
 }
 
 header img {
-  width: 100px;
+  width: 120px;
 }
 
-.hero img {
+.hero__picture img {
   max-width: 100%;
 }
 
 .content {
   padding: 30px;
+  max-width: 440px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -107,7 +113,7 @@ h1 .text-gold {
 }
 
 .form__error {
-  /* display: none; */
+  display: none;
   position: absolute;
   top: 60px;
   width: 100%;
@@ -116,8 +122,55 @@ h1 .text-gold {
 }
 
 .form__error-icon {
-  /* display: none; */
+  display: none;
   align-self: center;
   flex-shrink: 0;
   margin-right: 10px;
+}
+
+@media (min-width: 600px) {
+
+  body {
+    font-size: 20px;
+  }
+
+  .component {
+    background: left / 61% 100% no-repeat url(images/bg-pattern-desktop.svg);
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto 1fr;
+  }
+
+  header {
+    padding: 30px;
+    max-width: 440px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: start;
+  }
+
+  h1 {
+    text-align: start;
+    font-size: 3rem;
+  }
+
+  .hero {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    background: center / cover no-repeat url(images/hero-desktop.jpg);
+    grid-column: 2;
+    grid-row: 1 / -1;
+    align-self: center;
+  }
+
+  .hero__picture {
+    display: none;
+  }
+
+  .content {
+    align-self: center;
+  }
+
 }
