--- a/style.css
+++ b/style.css
@@ -1,25 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
-/* # Front-end Style Guide
-
-
-
-- Desaturated Red: hsl(0, 36%, 70%)
-- Soft Red: hsl(0, 93%, 68%)
-
-### Neutral
-
-- Dark Grayish Red: hsl(0, 6%, 24%)
-
-### Gradients
-
-- Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)
-- Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%)
-
-
-
-- Family: [Josefin Sans](https://fonts.google.com/specimen/Josefin+Sans)
-- Weights: 300, 400, 600 */
-
 
 *, *::before, *::after {
   margin: 0;
@@ -35,6 +14,10 @@ body {
 
 .show {
   display: block !important;
+}
+
+form.red-border {
+  border-color: red;
 }
 
 header {
@@ -89,7 +72,6 @@ h1 .text-gold {
 }
 
 .form__input {
-  height: 100%;
   margin-left: 20px;
   margin-right: 10px;
   border: none;
