--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h1 .text-gold {
   margin-left: 20px;
   margin-right: 10px;
   border: none;
+  outline: none;
   color: hsla(0, 6%, 14%, 0.705);
   min-width: 20px;
   flex-grow: 1;
