--- a/style.css
+++ b/style.css
@@ -1,55 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
-/* # Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-#### Text
-
-- Very dark desaturated blue: hsl(238, 29%, 16%)
-- Soft red: hsl(14, 88%, 65%)
-
-#### Gradient
-
-Background gradient:
-
-- Soft violet: hsl(273, 75%, 66%)
-- Soft blue: hsl(240, 73%, 65%)
-
-### Neutral
-
-#### Text
-
-- Very dark grayish blue: hsl(237, 12%, 33%)
-- Dark grayish blue: hsl(240, 6%, 50%)
-
-#### Dividers
-
-- Light grayish blue: hsl(240, 5%, 91%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 12px
-
-### Font
-
-- Family: [Kumbh Sans](https://fonts.google.com/specimen/Kumbh+Sans)
-- Weights: 400, 700 */
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+abbr {
+  text-decoration: none;
 }
 
 .page {
@@ -124,16 +82,25 @@ Background gradient:
   color: black !important;
 }
 
+.faq__question-arrow {
+  transition: all .3s ease-in;
+}
+
+.faq__question-arrow--active {
+  transform: rotate(180deg);
+  transition: all .3s ease-in;
+}
+
 .faq__answer {
   color: hsl(240, 6%, 50%);
-  height: 0;
-  transform: scale(0);
-  transition: all 1s ease-in;
+  opacity: 0;
+  max-height: 0;
+  transition: all .3s ease-in;
 }
 
 .faq__answer--active {
-  transform: scale(1);
-  height: auto;
+  opacity: 1;
+  max-height: 100px;
 }
 
 .faq__divider {
