--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ abbr {
   opacity: 0;
   max-height: 0;
   transition: all .3s ease-in;
+  line-height: 1.4;
 }
 
 .faq__answer--active {
@@ -113,6 +114,7 @@ abbr {
 
   .faq-wrapper {
     position: relative;
+    margin: 0 100px;
   }
 
   .faq-wrapper__illustration {
@@ -125,7 +127,7 @@ abbr {
   .faq {
     position: relative;
     display: flex;
-    max-width: 1000px;
+    max-width: 1200px;
     margin-top: 0;
     padding: 40px;
     clip-path: padding-box;
