--- a/style.css
+++ b/style.css
@@ -104,12 +104,31 @@ body {
 
 /* testimonial with purple background */
 .testimonial--bg-p {
+  position: relative;
   background-color: hsl(263, 55%, 52%);
   color: white;
 }
 
 .testimonial--bg-p .testimonial__avatar {
   border: 3px solid hsl(263, 49%, 61%);
+}
+
+.testimonial--bg-p .testimonial__author,
+.testimonial--bg-p .testimonial__header {
+  position: relative;
+  z-index: 2;
+}
+
+.testimonial--bg-p::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 3em;
+  width: 104px;
+  height: 104px;
+  z-index: 1;
+  background-image: url(images/bg-pattern-quotation.svg);
 }
 
 /* testimonial with dark grayish blue background */
@@ -176,5 +195,9 @@ body {
   .testimonial:last-child {
     grid-column: 4;
     grid-row: 1 / 3;
+  }
+
+  .testimonial--bg-p::before {
+    right: 8em;
   }
 }
