--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,175 @@
-/* # Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Dark Violet: hsl(256, 26%, 20%)
-- Grayish Blue: hsl(216, 30%, 68%)
-
-### Neutral
-
-- Very Dark Violet: hsl(270, 9%, 17%)
-- Dark Grayish Violet: hsl(273, 4%, 51%)
-- Very Light Gray: hsl(0, 0%, 98%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 16px
-
-### Headings
-
-- Family: [DM Serif Display](https://fonts.google.com/specimen/DM+Serif+Display)
-- Weights: 400
-
-### Body
-
-- Family: [Karla](https://fonts.google.com/specimen/Karla)
-- Weights: 400, 700
-
-## Icons
-
-You can use either use the social icons provided or load in a font icon library. Some library suggestions can be found below:
-
-- [Font Awesome](https://fontawesome.com)
-- [IcoMoon](https://icomoon.io)
-- [Ionicons](https://ionicons.com) */
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Karla", sans-serif;
+}
+
+.header {
+  padding: 1.4em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__img {
+  height: 1.4em;
+}
+
+.header__btn {
+  border: none;
+  cursor: pointer;
+}
+
+.header__nav {
+  display: none;
+}
+
+.about {
+  background-color: #2d2640;
+  color: white;
+  text-align: center;
+}
+
+.about__img {
+  width: 100%;
+}
+
+.about__content {
+  padding: 3em 1em;
+}
+
+.about__heading {
+  font-size: 2.5em;
+  font-family: "DM Serif Display", serif;
+  margin-bottom: 0.5em;
+}
+
+.about__subheading {
+  color: #fafafa;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.about__link {
+  display: inline-block;
+  border: 2px solid white;
+  margin-top: 2em;
+  padding: 8px 30px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 200%;
+}
+
+.different {
+  padding: 3em 1em;
+  text-align: center;
+}
+
+.different__heading {
+  font-family: "DM Serif Display", serif;
+  font-size: 2.5em;
+  color: #2d2640;
+  margin-bottom: 0.5em;
+}
+
+.different__item {
+  padding: 2em 0;
+}
+
+.different__item-logo {
+  margin-bottom: 1.5em;
+}
+
+.different__item-heading {
+  font-family: "DM Serif Display", serif;
+  font-size: 1.5em;
+  margin-bottom: 1em;
+  color: #2d2640;
+}
+
+.different__item-text {
+  color: #95a9c6;
+  line-height: 1.4;
+}
+
+.how {
+  margin: 3em 1em;
+  padding: 3em 1em;
+  background-color: #2d2640;
+  color: white;
+  text-align: center;
+}
+
+.how__heading {
+  font-family: "DM Serif Display", serif;
+  font-size: 2.5em;
+}
+
+.how__link {
+  display: inline-block;
+  border: 2px solid white;
+  margin-top: 2em;
+  padding: 8px 30px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 200%;
+}
+
+.footer {
+  background: url("../images/bg-pattern-footer-mobile.svg") no-repeat;
+  text-align: center;
+  padding: 5em 0;
+  margin-top: 120px;
+}
+
+.footer__socials {
+  margin-bottom: 2em;
+}
+
+.footer__logo {
+  margin-bottom: 1em;
+}
+
+.footer__social-link {
+  display: inline-block;
+  margin: 10px;
+}
+
+.footer__subheading {
+  font-size: 0.9em;
+  color: #95a9c6;
+  margin: 2em 0;
+  text-transform: uppercase;
+}
+
+.footer__list {
+  list-style: none;
+}
+
+.footer__link {
+  font-weight: 700;
+  font-size: 0.9em;
+  text-decoration: none;
+  color: #2d2640;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  line-height: 2;
 }
 /*# sourceMappingURL=style.css.map */
