--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ body {
   margin: 2em auto;
 }
 
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .header {
   position: relative;
   height: 80px;
@@ -58,8 +63,8 @@ body {
   height: calc(100vh - 80px);
   background: url("../images/bg-pattern-mobile-nav.svg") no-repeat bottom center;
   background-color: #2b272f;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   z-index: 1;
 }
 
@@ -154,8 +159,31 @@ body {
   text-align: center;
 }
 
+@media (min-width: 480px) and (max-width: 799px) {
+  .different {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 800px) {
+  .different__content {
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .different__decorative-line {
   width: 50%;
+}
+
+@media (min-width: 800px) {
+  .different__decorative-line {
+    width: 6em;
+    margin: 2em 0;
+  }
 }
 
 .different__heading {
@@ -165,8 +193,26 @@ body {
   margin-bottom: 0.5em;
 }
 
+@media (min-width: 800px) {
+  .different__heading {
+    text-align: left;
+  }
+}
+
 .different__item {
   padding: 2em 0;
+}
+
+@media (min-width: 800px) {
+  .different__item {
+    margin-right: 30px;
+  }
+}
+
+@media (min-width: 800px) {
+  .different__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .different__item-logo {
@@ -212,26 +258,65 @@ body {
 
 .footer {
   background: url("../images/bg-pattern-footer-mobile.svg") no-repeat;
+  background-color: #fafafa;
   text-align: center;
-  padding: 5em 0;
+  padding: 5em 1em;
   margin-top: 120px;
 }
 
-.footer__decorative-line {
-  width: 85%;
+@media (min-width: 600px) {
+  .footer {
+    text-align: left;
+    background-image: url("../images/bg-pattern-footer-desktop.svg");
+  }
 }
 
 .footer__socials {
   margin-bottom: 2em;
 }
 
+@media (min-width: 500px) {
+  .footer__socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footer__logo {
   margin-bottom: 1em;
 }
 
+@media (min-width: 500px) {
+  .footer__logo {
+    margin-bottom: 0;
+  }
+}
+
 .footer__social-link {
-  display: inline-block;
   margin: 10px;
+}
+
+@media (min-width: 600px) {
+  .footer__links {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(220px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    justify-items: center;
+  }
+}
+
+@media (min-width: 911px) {
+  .footer__links {
+    justify-items: start;
+  }
 }
 
 .footer__subheading {
